Fix spacing on iOS

--- a/resources/css/forms.pcss
+++ b/resources/css/forms.pcss
@@ -29,6 +29,7 @@
   border-width: 0;
   background: var(--background-darker);
   outline: none;
+  padding: 0;
 }
 
 .form__input::placeholder {
